{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 121,
  "lineage": "5f132824-a265-87c4-31e8-140d7ccccca0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipProduction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-032f6fc339744701c",
            "domain": "vpc",
            "id": "eipalloc-0c06c317a55f00df4",
            "instance": "i-06e1e1a082ac2208b",
            "network_interface": "eni-0832a4789b298eab8",
            "private_dns": "ip-10-0-0-241.ec2.internal",
            "private_ip": "10.0.0.241",
            "public_dns": "ec2-18-233-143-37.compute-1.amazonaws.com",
            "public_ip": "18.233.143.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "eipProduction",
              "Terraform": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.iProductionInstance",
            "aws_key_pair.keyDefaultKey",
            "aws_security_group.sgWebAccessible",
            "aws_subnet.subnGabonSystemPublic",
            "aws_vpc.vpcGabonSystem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipTest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09de5967205f087a4",
            "domain": "vpc",
            "id": "eipalloc-00a43c224d9bb3caf",
            "instance": "i-080f233378f0bfa8f",
            "network_interface": "eni-0c2d7ec264c2756d6",
            "private_dns": "ip-10-0-0-67.ec2.internal",
            "private_ip": "10.0.0.67",
            "public_dns": "ec2-3-232-106-185.compute-1.amazonaws.com",
            "public_ip": "3.232.106.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "test",
              "Name": "eipTest",
              "Terraform": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.iTestInstance",
            "aws_key_pair.keyDefaultKey",
            "aws_security_group.sgWebAccessible",
            "aws_subnet.subnGabonSystemPublic",
            "aws_vpc.vpcGabonSystem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iProductionInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d0cf3af28718ef8",
            "arn": "arn:aws:ec2:us-east-1:674925667700:instance/i-06e1e1a082ac2208b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e1e1a082ac2208b",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "GabonSystem-DefaultKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0832a4789b298eab8",
            "private_dns": "ip-10-0-0-241.ec2.internal",
            "private_ip": "10.0.0.241",
            "public_dns": "ec2-18-233-143-37.compute-1.amazonaws.com",
            "public_ip": "18.233.143.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 450,
                "volume_id": "vol-08619c3d9645dc718",
                "volume_size": 150,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031d84b45bc93ba54",
            "tags": {
              "Environment": "production",
              "Name": "iProductionInstance",
              "Terraform": "1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cb7f3661a93c02b9"
            ]
          },
          "dependencies": [
            "aws_key_pair.keyDefaultKey",
            "aws_security_group.sgWebAccessible",
            "aws_subnet.subnGabonSystemPublic",
            "aws_vpc.vpcGabonSystem"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iTestInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d0cf3af28718ef8",
            "arn": "arn:aws:ec2:us-east-1:674925667700:instance/i-080f233378f0bfa8f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080f233378f0bfa8f",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "GabonSystem-DefaultKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c2d7ec264c2756d6",
            "private_dns": "ip-10-0-0-67.ec2.internal",
            "private_ip": "10.0.0.67",
            "public_dns": "ec2-3-232-106-185.compute-1.amazonaws.com",
            "public_ip": "3.232.106.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 450,
                "volume_id": "vol-0dad2406ee3798b7f",
                "volume_size": 150,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031d84b45bc93ba54",
            "tags": {
              "Environment": "test",
              "Name": "iTestInstance",
              "Terraform": "1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cb7f3661a93c02b9"
            ]
          },
          "dependencies": [
            "aws_key_pair.keyDefaultKey",
            "aws_security_group.sgWebAccessible",
            "aws_subnet.subnGabonSystemPublic",
            "aws_vpc.vpcGabonSystem"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674925667700:internet-gateway/igw-0d36b7a9091a222ca",
            "id": "igw-0d36b7a9091a222ca",
            "owner_id": "674925667700",
            "tags": {
              "Terraform": "1"
            },
            "vpc_id": "vpc-0f5eedb7c15d27e63"
          },
          "dependencies": [
            "aws_vpc.vpcGabonSystem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtDefault",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03a630c0732162441",
            "owner_id": "674925667700",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d36b7a9091a222ca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Terraform": "1"
            },
            "vpc_id": "vpc-0f5eedb7c15d27e63"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpcGabonSystem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0110f69cb828fa37a",
            "route_table_id": "rtb-03a630c0732162441",
            "subnet_id": "subnet-031d84b45bc93ba54"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtDefault",
            "aws_subnet.subnGabonSystemPublic",
            "aws_vpc.vpcGabonSystem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgWebAccessible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674925667700:security-group/sg-0cb7f3661a93c02b9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb7f3661a93c02b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "173.79.4.69/32",
                  "86.125.99.127/32"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sgWebAccessible",
            "name_prefix": "",
            "owner_id": "674925667700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgWebAccessible",
              "Terraform": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5eedb7c15d27e63"
          },
          "dependencies": [
            "aws_vpc.vpcGabonSystem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgOutboundAll",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1766803830",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0cb7f3661a93c02b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.sgWebAccessible",
            "aws_vpc.vpcGabonSystem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgrHttpFromEverywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-709050627",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb7f3661a93c02b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.sgWebAccessible",
            "aws_vpc.vpcGabonSystem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgrPostgresFromSecured",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "173.79.4.69/32",
              "86.125.99.127/32"
            ],
            "description": "",
            "from_port": 5432,
            "id": "sgrule-4255159882",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb7f3661a93c02b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.sgWebAccessible"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgrSshFromEverywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2630425782",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb7f3661a93c02b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.sgWebAccessible",
            "aws_vpc.vpcGabonSystem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnGabonSystemPublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674925667700:subnet/subnet-031d84b45bc93ba54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-031d84b45bc93ba54",
            "map_public_ip_on_launch": true,
            "owner_id": "674925667700",
            "tags": {
              "Name": "subnGabonSystemPublic",
              "Terraform": "1"
            },
            "vpc_id": "vpc-0f5eedb7c15d27e63"
          },
          "dependencies": [
            "aws_vpc.vpcGabonSystem"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcGabonSystem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674925667700:vpc/vpc-0f5eedb7c15d27e63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0dada6884587cca4e",
            "default_route_table_id": "rtb-0e8b301c5b32cfe71",
            "default_security_group_id": "sg-0f70bde83706bbedb",
            "dhcp_options_id": "dopt-9008e3ea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f5eedb7c15d27e63",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e8b301c5b32cfe71",
            "owner_id": "674925667700",
            "tags": {
              "Name": "vpcGabonSystem",
              "Terraform": "1"
            }
          }
        }
      ]
    }
  ]
}